testdata/baselines/reference/submodule/conformance/jsdocAccessibilityTags.errors.txt
jsdocAccessibilityTag.js(32,14): error TS2339: Property 'priv2' does not exist on type 'C'.
jsdocAccessibilityTag.js(38,14): error TS2339: Property 'prot2' does not exist on type 'C'.
jsdocAccessibilityTag.js(44,14): error TS2339: Property 'pub2' does not exist on type 'C'.
jsdocAccessibilityTag.js(46,23): error TS2339: Property 'priv2' does not exist on type 'C'.
jsdocAccessibilityTag.js(55,14): error TS2339: Property 'priv2' does not exist on type 'D'.
jsdocAccessibilityTag.js(55,27): error TS2339: Property 'prot2' does not exist on type 'D'.
jsdocAccessibilityTag.js(55,40): error TS2339: Property 'pub2' does not exist on type 'D'.
jsdocAccessibilityTag.js(60,9): error TS2339: Property 'priv2' does not exist on type 'C'.
jsdocAccessibilityTag.js(60,25): error TS2339: Property 'prot2' does not exist on type 'C'.
jsdocAccessibilityTag.js(60,41): error TS2339: Property 'pub2' does not exist on type 'C'.
jsdocAccessibilityTag.js(61,9): error TS2339: Property 'priv2' does not exist on type 'D'.
jsdocAccessibilityTag.js(61,25): error TS2339: Property 'prot2' does not exist on type 'D'.
jsdocAccessibilityTag.js(61,41): error TS2339: Property 'pub2' does not exist on type 'D'.


==== jsdocAccessibilityTag.js (13 errors) ====
    class A {
        /**
         * Ap docs
         *
         * @private
         */
        priv = 4;
        /**
         * Aq docs
         *
         * @protected
         */
        prot = 5;
        /**
         * Ar docs
         *
         * @public
         */
        pub = 6;
        /** @public */
        get ack() { return this.priv }
        /** @private */
        set ack(value) { }
    }
    class C {
        constructor() {
            /**
             * Cp docs
             *
             * @private
             */
            this.priv2 = 1;
                 ~~~~~
!!! error TS2339: Property 'priv2' does not exist on type 'C'.
            /**
             * Cq docs
             *
             * @protected
             */
            this.prot2 = 2;
                 ~~~~~
!!! error TS2339: Property 'prot2' does not exist on type 'C'.
            /**
             * Cr docs
             *
             * @public
             */
            this.pub2 = 3;
                 ~~~~
!!! error TS2339: Property 'pub2' does not exist on type 'C'.
        }
        h() { return this.priv2 }
                          ~~~~~
!!! error TS2339: Property 'priv2' does not exist on type 'C'.
    }
    class B extends A {
        m() {
            this.priv + this.prot + this.pub
        }
    }
    class D extends C {
        n() {
            this.priv2 + this.prot2 + this.pub2
                 ~~~~~
!!! error TS2339: Property 'priv2' does not exist on type 'D'.
                              ~~~~~
!!! error TS2339: Property 'prot2' does not exist on type 'D'.
                                           ~~~~
!!! error TS2339: Property 'pub2' does not exist on type 'D'.
        }
    }
    new A().priv + new A().prot + new A().pub
    new B().priv + new B().prot + new B().pub
    new C().priv2 + new C().prot2 + new C().pub2
            ~~~~~
!!! error TS2339: Property 'priv2' does not exist on type 'C'.
                            ~~~~~
!!! error TS2339: Property 'prot2' does not exist on type 'C'.
                                            ~~~~
!!! error TS2339: Property 'pub2' does not exist on type 'C'.
    new D().priv2 + new D().prot2 + new D().pub2
            ~~~~~
!!! error TS2339: Property 'priv2' does not exist on type 'D'.
                            ~~~~~
!!! error TS2339: Property 'prot2' does not exist on type 'D'.
                                            ~~~~
!!! error TS2339: Property 'pub2' does not exist on type 'D'.
    